--- a/dices.cabal
+++ b/dices.cabal
@@ -15,9 +15,9 @@ cabal-version:        >=1.10
 
 executable dices
   main-is:              Main.hs
-  other-modules:        Dices
+  other-modules:        Dices, RPParty, Game
   -- other-extensions:
-  build-depends:        base >= 4.7 && < 5, random
+  build-depends:        base >= 4.7 && < 5, random, mtl
   hs-source-dirs:       src
   default-language:     Haskell2010
   ghc-options: 
